Implement freemium paywall for practice tests

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graceful Path Global Health</title>
-    <link rel="icon" type="image/jpeg" href="https://scontent.flos3-2.fna.fbcdn.net/v/t1.15752-9/627752552_2511858222545536_1185950041510102102_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_ohc=2XIt4DTzuogQ7kNvwEJ-Oe6&_nc_oc=AdleI4PChQN_V5h7_jv_l4UPvHltZIqr2J6S_7gFfMk7vJMLCzyF14S6J672Fp5XZyw&_nc_ad=z-m&_nc_cid=1361&_nc_zt=23&_nc_ht=scontent.flos3-2.fna&oh=03_Q7cD4gF7t7q56UMbCP0b_6SinZU6GgEN6jlHhFdZYw0SM1qxJg&oe=69C042FC" />
+    <link rel="icon" type="image/jpeg" href="https://scontent.flos3-1.fna.fbcdn.net/v/t1.15752-9/637892089_1852437922090798_1493900335337598158_n.jpg?stp=dst-jpg_s526x395_tt6&_nc_cat=102&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeFF72N4xirjB5KFWbMPhpHeTXFpXak-mXFNcWldqT6ZcVjep_mxF7GzHVhHFoWZn42d-OqkBYLt_CdfoU5pf1h2&_nc_ohc=UdfeBGHbZWUQ7kNvwH3_XCW&_nc_oc=Adm8cKb_gh5Escla3tvMARtzwLEKzM2NqqUI_7kvxY4IcWUQRDfhiT-uEHNBNY3lAKE&_nc_ad=z-m&_nc_cid=1361&_nc_zt=23&_nc_ht=scontent.flos3-1.fna&_nc_ss=8&oh=03_Q7cD4gH9ajtfQgnLBGDEnxa1UsZ91EJ8FKllRIPkadpTQItOzA&oe=69C96737" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
